--- a/.gitignore
+++ b/.gitignore
@@ -3236,3 +3236,58 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+node_modules/base64url/index.js
+node_modules/base64url/LICENSE
+node_modules/base64url/package.json
+node_modules/base64url/readme.md
+node_modules/base64url/dist/.gitkeep
+node_modules/base64url/dist/base64url.d.ts
+node_modules/base64url/dist/base64url.js
+node_modules/base64url/dist/pad-string.d.ts
+node_modules/base64url/dist/pad-string.js
+node_modules/oauth/index.js
+node_modules/oauth/LICENSE
+node_modules/oauth/Makefile
+node_modules/oauth/package.json
+node_modules/oauth/Readme.md
+node_modules/oauth/examples/github-example.js
+node_modules/oauth/examples/term.ie.oauth-HMAC-SHA1.js
+node_modules/oauth/examples/twitter-example.js
+node_modules/oauth/examples/express-gdata/server.js
+node_modules/oauth/examples/express-gdata/views/google_calendars.ejs
+node_modules/oauth/examples/express-gdata/views/google_contacts.ejs
+node_modules/oauth/examples/express-gdata/views/layout.ejs
+node_modules/oauth/lib/_utils.js
+node_modules/oauth/lib/oauth.js
+node_modules/oauth/lib/oauth2.js
+node_modules/oauth/lib/sha1.js
+node_modules/oauth/tests/oauth2tests.js
+node_modules/oauth/tests/oauthtests.js
+node_modules/oauth/tests/sha1tests.js
+node_modules/oauth/tests/shared.js
+node_modules/passport-github2/LICENSE
+node_modules/passport-github2/package.json
+node_modules/passport-github2/README.md
+node_modules/passport-github2/lib/index.js
+node_modules/passport-github2/lib/profile.js
+node_modules/passport-github2/lib/strategy.js
+node_modules/passport-oauth2/CHANGELOG.md
+node_modules/passport-oauth2/LICENSE
+node_modules/passport-oauth2/package.json
+node_modules/passport-oauth2/README.md
+node_modules/passport-oauth2/.github/FUNDING.yml
+node_modules/passport-oauth2/lib/index.js
+node_modules/passport-oauth2/lib/strategy.js
+node_modules/passport-oauth2/lib/utils.js
+node_modules/passport-oauth2/lib/errors/authorizationerror.js
+node_modules/passport-oauth2/lib/errors/internaloautherror.js
+node_modules/passport-oauth2/lib/errors/tokenerror.js
+node_modules/passport-oauth2/lib/state/null.js
+node_modules/passport-oauth2/lib/state/pkcesession.js
+node_modules/passport-oauth2/lib/state/session.js
+node_modules/passport-oauth2/lib/state/store.js
+node_modules/uid2/HISTORY.md
+node_modules/uid2/index.js
+node_modules/uid2/LICENSE
+node_modules/uid2/package.json
+node_modules/uid2/README.md
